I fixed the stuck at fault not affecting the outputs.